# bot

./: .gitignore  Cargo.toml  README.md  log.bat
bot-client-rust/: Cargo.toml
bot-client-rust/src/: bot_client.rs  bot_driver_log.rs  bot_fs.rs  bot_tail.rs  lib.rs  util.rs
bot-client-rust/src/bot_shell/: bot_shell_ext.rs  bot_shell_ext_service.rs  mod.rs
bot-client-rust/tests/: edr_agent_install_test.rs  edr_agent_test.rs
bot-rpc/: Cargo.toml  bot.proto  build.rs
bot-rpc/proto/: bot.proto
bot-rpc/src/: main.rs
bot-rpc/src/rpc/: bot.rs  bot_grpc.rs
bot-server-rust/: Cargo.toml  README.md
bot-server-rust/scripts/: build.bat  run.bat  upgrade.bat
bot-server-rust/src/: ast.rs  bin.rs  bot_server.rs  client_mode.rs  common_ext.rs  lib.rs  protocol.rs  server_mode.rs  util.rs
bot-server-rust/src/cmd/: win_cmd.rs
scripts/: build.bat
src/: ast.rs  bot_server.rs  cli_auto_mode.rs  client_mode.rs  cmd.rs  common_ext.rs  lib.rs  main.rs  protocol.rs  server_mode.rs  util.rs
src/cmd/: mod.rs  win_cmd.rs
