[package]
name = "bot"
version = "0.1.0"
authors = ["wucong <1875486458@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "0.9.1"
encoding = "0.2"
failure = "*"
log = "0.4.8"
nom = "5.1.0"

[dependencies.winapi]
version = "0.3.8"
features = [
    "std",
    "basetsd",
    "combaseapi",
    "errhandlingapi",
    "evntrace",
    "minwinbase",
    "minwindef",
    "oaidl",
    "objbase",
    "objidl",
    "oleauto",
    "rpcdce",
    "timezoneapi",
    "unknwnbase",
    "wbemcli",
    "winbase",
    "windef",
    "winerror",
    "winnt",
    "wmistr",
    "wtypesbase",
    "wtypes",
    "commapi",
    "psapi",
    "tlhelp32",
    "wow64apiset",
    "namedpipeapi",
    "synchapi",
    "userenv",
    "winuser",]
