[package]
name = "bot-client-rust"
version = "0.1.0"
authors = ["saber <saber.wu@trantect.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = {version ="0.4.0",features=["async-std-runtime"] }
futures = "0.3.4"
async-std = "1.5.0"
bot = { path = "../bot-server-rust/" }
failure = "0.1.7"
