[package]
name = "bot"
version = "0.1.0"
authors = ["wucong <1875486458@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "0.9.1"
encoding = "0.2"
failure = "*"
log = "0.4.8"
nom = "5.1.0"
simplelog = "0.7.4"
structopt = "0.3.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.47"
bincode = "1.2.1"
md5 = "0.7.0"
ctrlc = { version = "3.0", features = ["termination"] }
tail-rust = { git = "https://github.com/woodgear/tail-rust.git" }
futures = "0.1.28"
tokio = {version="0.1.22"}
tokio-threadpool = "0.1.15"
enum-methods = "0.0.8"
tempdir = "0.3.7"
declare-fs = { git = "https://github.com/woodgear/declarative-fs.git" }
rand = "0.7.3"
path-slash = "0.1.1"

[target.'cfg(unix)'.dependencies]
shell = { git = "https://github.com/google/rust-shell.git" }

[dependencies.winapi]
version = "0.3.8"
features = [
    "std",
    "basetsd",
    "combaseapi",
    "errhandlingapi",
    "evntrace",
    "minwinbase",
    "minwindef",
    "oaidl",
    "objbase",
    "objidl",
    "oleauto",
    "rpcdce",
    "timezoneapi",
    "unknwnbase",
    "wbemcli",
    "winbase",
    "windef",
    "winerror",
    "winnt",
    "wmistr",
    "wtypesbase",
    "wtypes",
    "commapi",
    "psapi",
    "tlhelp32",
    "wow64apiset",
    "namedpipeapi",
    "synchapi",
    "userenv",
    "winuser",]
[lib]
name = "bot"
path = "src/lib.rs"

[[bin]]
name = "bot"
path = "src/bin.rs"
